--- a/css/main.css
+++ b/css/main.css
@@ -364,7 +364,7 @@
 .carusel__box {
   display: flex;
   align-items: center;
-  transform: translateY(-20px);
+  margin-top: 10px;
 }
 
 .carusel__text {
@@ -768,158 +768,202 @@
     font-size: 1.5em;
   }
 }
-.main__section {
-  max-width: 100%;
-  background: #fff;
-}
-
-.main__head {
-  height: 70px;
-  gap: 0px;
-  opacity: 0px;
-  font-family: Cormorant Garamond;
-  font-size: 58px;
-  font-weight: 400;
-  line-height: 69.6px;
-  text-align: left;
-  color: #141414;
-  text-align: center;
-}
-
-.main__item {
-  width: 276px;
-  height: 176px;
-  gap: 24px;
-  opacity: 0px;
-  margin-top: 38px;
-}
-
-.main__list {
-  justify-content: center;
-  margin-top: 164px;
-  display: flex;
-  gap: 34px;
-  flex-wrap: wrap;
-}
-
-.main__bg {
+.main__box {
   width: 276px;
   height: 50px;
   gap: 0px;
   border-radius: 6px;
   opacity: 0px;
-  background: #22C96A;
+  background-color: #22C96A;
 }
 
-.main__item--txt {
-  height: 42px;
+.main__box__content1 {
+  margin-top: 200px;
+}
+
+.main__box2 {
+  width: 276px;
+  height: 70px;
   gap: 0px;
+  border-radius: 6px;
   opacity: 0px;
+  background-color: #22C96A;
+}
+
+.main__box__content2 {
+  margin-top: 182px;
+}
+
+.main__box3 {
+  width: 276px;
+  height: 80px;
+  gap: 0px;
+  border-radius: 6px;
+  opacity: 0px;
+  background-color: #22C96A;
+}
+
+.main__box__content3 {
+  margin-top: 175px;
+}
+
+.main__box4 {
+  width: 276px;
+  height: 240px;
+  gap: 0px;
+  border-radius: 6px;
+  opacity: 0px;
+  background-color: #22C96A;
+}
+
+.main__box__content4 {
+  margin-top: 18px;
+}
+
+.main__content {
+  width: 1296px;
+  gap: 64px;
+  opacity: 0px;
+  margin: 0 auto;
+}
+
+.main__span {
   font-family: Cormorant Garamond;
   font-size: 28px;
   font-weight: 400;
   line-height: 42px;
   text-align: left;
   color: #141414;
+  display: block;
+  padding-bottom: 20px;
 }
 
-.main__bg1 {
-  width: 276px;
-  height: 70px;
-  gap: 0px;
-  border-radius: 6px;
-  opacity: 0px;
-  background: #22C96A;
+.main__list {
+  display: flex;
+  justify-content: space-around;
+  margin-left: 70px;
 }
 
-.main__item1 {
-  width: 276px;
-  height: 196px;
+.main__span5 {
+  margin-bottom: -100px;
+}
+
+.main__head {
+  font-family: Cormorant Garamond;
+  font-size: 58px;
+  font-weight: 400;
+  line-height: 69.6px;
+  text-align: left;
+  color: #141414;
+  margin-top: 50px;
+  margin-left: 100px;
+}
+
+.main__text {
+  font-family: Montserrat;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 24px;
+  text-align: center;
+  color: #141414;
   margin-top: 20px;
 }
 
-.main__item2 {
-  width: 276px;
-  height: 206px;
-  margin-top: 10px;
+@media only screen and (max-width: 769px) {
+  .main__content {
+    width: 768px;
+  }
+  .main__head {
+    font-size: 40px;
+    font-weight: 400;
+    line-height: 48px;
+    text-align: left;
+    width: 708px;
+    margin-left: 30px;
+  }
+  .main__box {
+    width: 153px;
+    height: 50px;
+  }
+  .main__box2 {
+    width: 153px;
+    height: 70px;
+  }
+  .main__box3 {
+    width: 153px;
+    height: 80px;
+  }
+  .main__box4 {
+    width: 153px;
+    height: 240px;
+    margin-top: -2px;
+  }
+  .main__span {
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 30px;
+    text-align: center;
+  }
+  .main__text {
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 21px;
+    text-align: center;
+    width: 153px;
+  }
+  .main__list {
+    margin-left: -7px;
+  }
 }
-
-.main__item3 {
-  width: 276px;
-  height: 372px;
-  margin-top: -150px;
-}
-
-.main__bg2 {
-  width: 276px;
-  height: 80px;
-  gap: 0px;
-  border-radius: 6px;
-  opacity: 0px;
-  background: #22C96A;
-}
-
-.main__bg3 {
-  width: 276px;
-  height: 240px;
-  gap: 0px;
-  border-radius: 6px;
-  opacity: 0px;
-  background: #22C96A;
-}
-
-/* Responsive Styles */
-@media (max-width: 768px) {
+@media only screen and (max-width: 368px) {
   .main__list {
     display: flex;
-    align-items: center;
+    flex-direction: column;
   }
-  .main__item,
-  .main__item1,
-  .main__item2,
-  .main__item3 {
-    width: 100%;
-    max-width: 156px;
+  .main__item {
+    margin-left: 105px;
+    margin-top: 50px;
   }
-  .main__bg,
-  .main__bg1,
-  .main__bg2,
-  .main__bg3 {
-    width: 100%;
-    margin-top: 100px;
+  .main__box__content2 {
+    margin-top: 50px;
   }
-  .main__item3 {
+  .main__box__content4 {
+    margin-top: 50px;
+  }
+  .main__box__content3 {
+    margin-top: -400px;
+  }
+  .main__head {
+    font-size: 30px;
+    font-weight: 400;
+    text-align: center;
+    margin-left: 10px;
+    width: 340px;
+    margin-bottom: -100px;
+  }
+  .main__item {
+    display: flex;
+    flex-direction: column;
+  }
+  .main__span {
+    position: absolute;
+    width: 150px;
+    margin-top: -50px;
+  }
+  .main__box__content3 {
+    margin-left: 5px;
+    margin-top: 70px;
+  }
+  .main__box4 {
     margin-top: 20px;
   }
 }
-@media only screen and (max-width: 376px) {
+@media only screen and (max-width: 320px) {
   .main__list {
-    flex-direction: column-reverse;
-    text-align: center;
+    margin-left: -20px;
   }
   .main__head {
-    font-size: 24px;
-    height: 300px;
-  }
-  .main__bg {
-    background-color: #22C96A;
-  }
-  .main__item,
-  .main__item1,
-  .main__item2,
-  .main__item3 {
-    padding: 10px;
-    gap: 250px;
-  }
-  .main__item--txt {
-    font-size: 16px;
-  }
-  .main__box {
-    display: flex;
-    gap: 35px;
-  }
-  .rate {
-    font-size: 12px;
+    margin-left: -17px;
   }
 }
 .grid__section {
@@ -974,9 +1018,8 @@
 }
 
 .grid__input {
-  width: 100%;
-  max-width: 636px;
-  height: 6px;
+  width: 636px;
+  height: 3px;
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
@@ -1064,14 +1107,14 @@ output {
   font-weight: 300;
   font-size: 14px;
   line-height: 1.5;
-  transform: translateY(50px);
+  transform: translateY(60px);
   color: #707d89;
 }
 
 .grid__right--text {
   font-family: "Montserrat", sans-serif;
   font-weight: 300;
-  transform: translateY(130px);
+  transform: translateY(90px);
   font-size: 14px;
   line-height: 1.5;
   color: #707d89;
@@ -1080,7 +1123,7 @@ output {
 .grid__right--span1 {
   font-family: "Cormorant Garamond", sans-serif;
   font-weight: 400;
-  transform: translateY(120px);
+  transform: translateY(90px);
   font-size: 48px;
   line-height: 1.3;
   color: #141414;
@@ -1089,7 +1132,7 @@ output {
 .grid__right--span {
   font-family: "Cormorant Garamond", sans-serif;
   font-weight: 400;
-  transform: translateY(120px);
+  transform: translateY(90px);
   font-size: 48px;
   line-height: 1.3;
   color: #141414;
@@ -1124,7 +1167,7 @@ output {
 }
 
 .grid__btn--btn {
-  transform: translateY(-250px);
+  transform: translateY(75px);
   border-radius: 6px;
   padding: 16px 32px;
   width: 430px;
@@ -1166,6 +1209,18 @@ output {
     border: none;
     margin-top: 20px;
   }
+  .grid__right--text {
+    transform: translateY(-30px);
+  }
+  .grid__right--text1 {
+    transform: translateY(120px);
+  }
+  .grid__right--span {
+    transform: translateY(-100px);
+  }
+  .grid__right--span1 {
+    transform: translateY(120px);
+  }
 }
 * {
   box-sizing: border-box;
@@ -1205,6 +1260,7 @@ output {
 .alside__item__head {
   font-family: "Cormorant Garamond", serif;
   font-size: 32px;
+  transform: translateY(35px);
   font-weight: 400;
   line-height: 41.6px;
   text-align: left;
@@ -1216,6 +1272,7 @@ output {
   font-size: 16px;
   font-weight: 300;
   line-height: 24px;
+  transform: translateY(50px);
   text-align: left;
   color: #141414;
   width: 328px;
@@ -1242,10 +1299,11 @@ output {
   height: 30px;
   padding: 10px;
   gap: 10px;
+  margin-left: -125px;
   border-radius: 50px;
   border: 1px 0px 0px 0px;
   opacity: 0px;
-  background-color: #D2DAE1;
+  background-color: #ffffff;
   margin-top: -25px;
 }
 
@@ -1440,6 +1498,7 @@ output {
 
 .box {
   height: 1206px;
+  margin-top: 25px;
   background-color: #F9FAFB;
 }
 
@@ -1528,7 +1587,7 @@ output {
     margin-left: -5px;
   }
 }
-@media only screen and (max-width: 360px) {
+@media only screen and (max-width: 368px) {
   .box__text2 {
     width: 300px;
   }
@@ -1539,7 +1598,7 @@ output {
 .small__section {
   width: 100%;
   padding: 50px 0;
-  background-color: #f8f8f8;
+  background-color: #ffffff;
   text-align: center;
 }
 
@@ -1589,7 +1648,10 @@ output {
     padding: 12px 24px;
   }
 }
-@media only screen and (max-width: 361px) {
+@media only screen and (max-width: 368px) {
+  .small__section {
+    margin-top: 750px;
+  }
   .small__head {
     font-size: 32px;
     line-height: 38px;
@@ -1666,9 +1728,13 @@ output {
 }
 
 .footer__hr {
-  width: 1296px;
-  border: 0.1px solid #FFFFFF;
-  opacity: 0.8;
+  width: 1250px;
+  height: 0px;
+  gap: 0px;
+  border: 1px 0px 0px 0px;
+  opacity: 0.2px;
+  margin-top: 25px;
+  transform: translateX(300px);
 }
 
 @media only screen and (max-width: 769px) {
@@ -1678,6 +1744,14 @@ output {
   .footer__text1, .footer__text2, .footer__text3, .footer__text4 {
     margin-left: 20px;
     width: 708px;
+  }
+  .footer__hr {
+    width: 708px;
+    height: 0px;
+    gap: 0px;
+    margin-left: -275px;
+    border: 1px 0px 0px 0px;
+    opacity: 0.2px;
   }
 }
 @media only screen and (max-width: 376px) {
@@ -1690,6 +1764,13 @@ output {
   }
   .footer__logo {
     margin-left: 20px;
+  }
+  .footer__hr {
+    width: 328px;
+    height: 0px;
+    gap: 0px;
+    border: 1px 0px 0px 0px;
+    opacity: 0.2px;
   }
 }
 html {
