--- a/scss/blocks/_carusel.scss
+++ b/scss/blocks/_carusel.scss
@@ -34,7 +34,7 @@
 .carusel__box {
     display: flex;
     align-items: center; 
-    transform: translateY(-20px);
+    margin-top: 10px;
 }
 
 .carusel__text {
