--- a/scss/blocks/_box.scss
+++ b/scss/blocks/_box.scss
@@ -4,11 +4,12 @@
     font-weight: 400;
     line-height: 69.6px;
     text-align: center;
-    color:  #141414;
+    color: #141414;
 }
 
 .box {
     height: 1206px;
+    margin-top: 25px;
     background-color: #F9FAFB;
 }
 
@@ -32,7 +33,7 @@
     font-weight: 300;
     line-height: 21px;
     text-align: left;
-    color:#707D89;
+    color: #707D89;
 }
 
 .box__text {
@@ -41,7 +42,7 @@
     font-weight: 400;
     line-height: 41.6px;
     text-align: right;
-    color:#141414;
+    color: #141414;
     margin-right: 70px;
 }
 
@@ -51,7 +52,7 @@
     font-weight: 300;
     line-height: 24px;
     text-align: left;
-    color:#141414;
+    color: #141414;
     width: 636px;
 }
 
@@ -62,7 +63,7 @@
     margin-bottom: 20px;
 }
 
-@media only screen and (max-width:769px) {
+@media only screen and (max-width: 769px) {
     .box__head {
         font-family: Cormorant Garamond;
         font-size: 40px;
@@ -88,7 +89,7 @@
         margin-left: 50px;
     }
 
-    .box__text{
+    .box__text {
         margin-left: -20px;
         text-align: left;
         font-family: Cormorant Garamond;
@@ -102,7 +103,7 @@
     }
 }
 
-@media only screen and (max-width:360px) {
+@media only screen and (max-width: 368px) {
     .box__text2 {
         width: 300px;
     }
