--- a/scss/blocks/_grid.scss
+++ b/scss/blocks/_grid.scss
@@ -50,9 +50,8 @@
   }
   
   .grid__input {
-    width: 100%;
-    max-width: 636px;
-    height: 6px;
+    width: 636px;
+    height: 3px;
     appearance: none;
     background: #ddd;
     outline: none;
@@ -138,14 +137,14 @@
     font-weight: 300;
     font-size: 14px;
     line-height: 1.5;
-    transform: translateY(50px);
+    transform: translateY(60px);
     color: #707d89;
   }
   
   .grid__right--text {
     font-family: "Montserrat", sans-serif;
     font-weight: 300;
-    transform: translateY(130px);
+    transform: translateY(90px);
     font-size: 14px;
     line-height: 1.5;
     color: #707d89;
@@ -154,7 +153,7 @@
   .grid__right--span1 {
     font-family: "Cormorant Garamond", sans-serif;
     font-weight: 400;
-    transform: translateY(120px);
+    transform: translateY(90px);
     font-size: 48px;
     line-height: 1.3;
     color: #141414;
@@ -163,7 +162,7 @@
   .grid__right--span {
     font-family: "Cormorant Garamond", sans-serif;
     font-weight: 400;
-    transform: translateY(120px);
+    transform: translateY(90px);
     font-size: 48px;
     line-height: 1.3;
     color: #141414;
@@ -200,7 +199,7 @@
   }
   
   .grid__btn--btn {
-    transform: translateY(-250px);
+    transform: translateY(75px);
     border-radius: 6px;
     padding: 16px 32px;
     width: 430px;
@@ -248,20 +247,20 @@
       margin-top: 20px;
     }
   
-    // .grid__right--text{
-    //   transform: translateY(-30px);
-    // }
-    // .grid__right--text1 {
-    //   transform: translateY(120px);
-    // }
+    .grid__right--text{
+      transform: translateY(-30px);
+    }
+    .grid__right--text1 {
+      transform: translateY(120px);
+    }
 
-    // .grid__right--span{
-    //   transform: translateY(-100px);
-    // }
+    .grid__right--span{
+      transform: translateY(-100px);
+    }
 
-    // .grid__right--span1{
-    //   transform: translateY(120px);
-    // }
+    .grid__right--span1{
+      transform: translateY(120px);
+    }
   
   }
   
